--- a/css/styles.css
+++ b/css/styles.css
@@ -69,6 +69,14 @@ body {
   background-repeat: no-repeat;
 }
 
+@media (min-device-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-hero {
+    background-image: url(../images/images-img/header-bg@2x.jpg);
+  }
+}
+
 .hero-container {
   display: flex;
   flex-direction: column;
@@ -239,6 +247,7 @@ body {
 }
 
 .img-right-content-link {
+  overflow: hidden;
   position: relative;
 }
 
@@ -274,6 +283,18 @@ body {
   color: var(--secondary-text-color);
 
   transition: all 250ms linear;
+
+  transform: translateX(-120%);
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.img-right-content-link:hover .content-in-img {
+  transform: translateX(0);
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
 }
 
 /* ------------------CAPABILITIES-------------------- */
@@ -382,6 +403,14 @@ body {
   padding-top: 120px;
   padding-bottom: 231px;
   background-image: url(../images/images-img/under-footer-bg.jpg);
+}
+
+@media (min-device-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .section-build {
+    background-image: url(../images/images-img/under-footer-bg@2x.jpg);
+  }
 }
 
 .title-build {
@@ -582,7 +611,7 @@ body {
 
 .wrap-icons-social-media {
   margin-top: 35px;
-  margin-left: 46px;
+  margin-left: auto;
 }
 
 .social-media-list {
